# ppx_deriving

./: META.ppx_deriving.template  README.md  dune  dune-project  ppx_deriving.opam  ppx_deriving_mel.opam  ppx_deriving_melange.opam
src/: ppx_deriving_main.cppo.ml
src/api/: dune  ppx_deriving.cppo.ml
src/runtime/: dune
src_examples/: dune
src_plugins/create/: dune
src_plugins/enum/: dune
src_plugins/eq/: dune
src_plugins/fold/: dune
src_plugins/iter/: dune
src_plugins/make/: dune
src_plugins/map/: dune
src_plugins/ord/: dune
src_plugins/show/: dune
src_plugins/std/: dune
src_test/api/: dune
src_test/create/: dune
src_test/deriving/: dune
src_test/enum/: dune
src_test/eq/: dune
src_test/fold/: dune
src_test/iter/: dune
src_test/make/: dune
src_test/map/: dune
src_test/ord/: dune
src_test/runtime/: dune
src_test/show/: dune
