(rule
 (deps test_deriving_iter.cppo.ml)
 (targets test_deriving_iter.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(test
 (name test_deriving_iter)
 (libraries ounit2 ppx_deriving_melange.runtime)
 (preprocess (pps ppx_deriving_melange.iter ppx_deriving_melange.show)))
