(rule
 (deps test_deriving_map.cppo.ml)
 (targets test_deriving_map.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(test
 (name test_deriving_map)
 (libraries ounit2 ppx_deriving_melange.runtime)
 (preprocess (pps ppx_deriving_melange.map ppx_deriving_melange.show)))
